# ladderlogic

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  demo.ladder  demo.sh  ladderlogic.cabal  stack.yaml  test.ladder
LadderLogic/: Parser.hs  Types.hs
app/: Compiler.hs  Main.hs  Repl.hs
ladderrt/include/: binarylogic.h  input.h  logic.h  logicmanager.h  not.h  output.h
ladderrt/src/: input.cpp  logic.cpp  not.cpp  output.cpp
ladderrt/test/include/: stublogic.h
ladderrt/test/src/: logicmanagertests.cpp  logictests.cpp  main.cpp
src/Text/: LadderLogic.hs
src/Text/LadderLogic/: Compiler.hs  Parser.hs  Repl.hs  Types.hs
src/Text/LadderLogic/Compiler/: Arduino.hs
src/Text/LadderLogic/Types/: Internal.hs
test/: CompilerSpec.hs  ParserSpec.hs  Spec.hs  TypesSpec.hs
