name:                ladderlogic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mciantyre/ladderlogic#readme
license:             Apache
license-file:        LICENSE
author:              Ian McIntyre
maintainer:          me@ianpmcintyre.com
copyright:           2017, 2018 Ian McIntyre
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Text.LadderLogic
                       Text.LadderLogic.Compiler
                       Text.LadderLogic.Compiler.Arduino
                       Text.LadderLogic.Types
                       Text.LadderLogic.Parser
                       Text.LadderLogic.Repl
  other-modules:       Text.LadderLogic.Types.Internal
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , mtl
                     , transformers
                     , trifecta
  default-language:    Haskell2010
  hs-source-dirs:      src

executable ladderc
  hs-source-dirs:      app
  main-is:             Compiler.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ladderlogic
                     , bytestring
                     , trifecta
  default-language:    Haskell2010

executable ladderepl
  hs-source-dirs:      app
  main-is:             Repl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ladderlogic
                     , trifecta
  default-language:    Haskell2010

test-suite ladderlogic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CompilerSpec
                       ParserSpec
                       TypesSpec
  build-depends:       base
                     , ladderlogic
                     , hspec
                     , raw-strings-qq
                     , trifecta
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mciantyre/ladderlogic
